--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-openai==0.28
-pandas
-langchain
-langchain-community
+streamlit==1.25.0
+openai==0.28.0
+pandas==1.5.3
+langchain==0.130.0
+langchain-community==0.1.0
